--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "php": "^7.3 | ^8.0",
         "ext-gd": "*",
         "composer/installers": "^1.4.0",
-        "userfrosting/framework": "^4.6",
+        "phillmac/userfrosting-framework": "4.6.3-sasl",
         "symfony/console": "^5.1",
         "wikimedia/composer-merge-plugin": "^2.1.0"
     },
