--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: docker/app
     environment:
-      - DB_DRIVER=mysql
+      - DB_CONNECTION=mysql
       - DB_HOST=ufmysql
       - DB_PORT=3306
       - DB_NAME=userfrosting
@@ -36,7 +36,7 @@ services:
       - backend
 
   ufmysql:
-    image: mysql:5.7
+    image: mysql:8.0
     networks:
       - backend
     environment:
