Update default env file

--- a/app/.env.example
+++ b/app/.env.example
@@ -15,3 +15,5 @@ SMTP_PASSWORD="password"
 SMTP_PORT="587"
 SMTP_AUTH="true"
 SMTP_SECURE="tls"
+MAIL_FROM_ADDRESS="noreply@example.com"
+MAIL_FROM_NAME="Site Administrator"
