Add env for public URI, default back to empty string

--- a/app/.env.example
+++ b/app/.env.example
@@ -17,3 +17,4 @@ SMTP_AUTH="true"
 SMTP_SECURE="tls"
 MAIL_FROM_ADDRESS="noreply@example.com"
 MAIL_FROM_NAME="Site Administrator"
+URI_PUBLIC="" # Set to the base URI of your site, e.g. http://www.example.com in production. If left blank, it will be automatically determined.
