--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php_versions: ['8.0', '8.1', '8.2']
+        php_versions: ['8.0', '8.1', '8.2', '8.3']
 
     runs-on: ubuntu-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - Memory SQLite
@@ -69,7 +69,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php_versions: ['8.0', '8.1', '8.2']
+        php_versions: ['8.0', '8.1', '8.2', '8.3']
 
     runs-on: ubuntu-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - MySQL
@@ -148,7 +148,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          php_versions: ['8.0', '8.1', '8.2']
+          php_versions: ['8.0', '8.1', '8.2', '8.3']
 
       runs-on: ubuntu-latest
       name: PHPUnit - PHP ${{ matrix.php_versions }} - SQLite
@@ -210,7 +210,7 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          php_versions: ['8.0', '8.1', '8.2']
+          php_versions: ['8.0', '8.1', '8.2', '8.3']
 
       runs-on: ubuntu-latest
       name: PHPUnit - PHP ${{ matrix.php_versions }} - PostgreSQL
@@ -278,7 +278,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          php_versions: ['8.0', '8.1', '8.2']
+          php_versions: ['8.0', '8.1', '8.2', '8.3']
 
     runs-on: windows-latest
     name: PHPUnit - PHP ${{ matrix.php_versions }} - Windows
