Update to PHPUnit 10

--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ vagrant/Homestead/
 .vagrant/
 
 # Ignore dev utility cache
-.phpunit.result.cache
+.phpunit.cache
 .php_cs.cache
 
 # Ignore api doc
