--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
     backupGlobals="false" 
-    backupStaticAttributes="false" 
     bootstrap="vendor/autoload.php" 
     colors="true" 
-    convertErrorsToExceptions="true" 
-    convertNoticesToExceptions="true" 
-    convertWarningsToExceptions="true" 
     processIsolation="false" 
     stderr="true" 
     stopOnFailure="false" 
-    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd"
+    xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd" 
+    cacheDirectory=".phpunit.cache" 
+    backupStaticProperties="false"
 >
-  <coverage includeUncoveredFiles="true" processUncoveredFiles="false">
-    <include>
-      <directory suffix=".php">app/src/</directory>
-    </include>
+  <coverage includeUncoveredFiles="true">
     <report>
       <clover outputFile="_meta/coverage.xml"/>
       <html outputDirectory="_meta/coverage"/>
@@ -29,7 +24,9 @@
   <php>
     <env name="UF_MODE" value="testing"/>
   </php>
-  <listeners>
-    <listener class="\Mockery\Adapter\Phpunit\TestListener"></listener>
-  </listeners>
+  <source>
+    <include>
+      <directory suffix=".php">app/src/</directory>
+    </include>
+  </source>
 </phpunit>
