--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -4,13 +4,9 @@ RUN apt-get update
 
 RUN apt-get install -y apt-utils
 
-# Add NodeJS LTS Repository
-ARG NODE_VERSION=18
-RUN apt-get install -y ca-certificates curl gnupg \
-    && mkdir -p /etc/apt/keyrings \
-    && curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg \
-    && echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_VERSION.x nodistro main" > /etc/apt/sources.list.d/nodesource.list \
-    && apt-get update
+# Add NodeJS 18 Repository
+RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - && \
+    apt-get install -y nodejs
 
 RUN apt-get install -y \
     libc-client-dev \
