--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
     "require": {
         "php": "^8.0",
         "ext-gd": "*",
-        "userfrosting/framework": "^5.0",
-        "userfrosting/sprinkle-core": "^5.0",
-        "userfrosting/sprinkle-account": "^5.0",
-        "userfrosting/sprinkle-admin": "^5.0",
-        "userfrosting/theme-adminlte": "^5.0"
+        "userfrosting/framework": "~5.0.0",
+        "userfrosting/sprinkle-core": "~5.0.0",
+        "userfrosting/sprinkle-account": "~5.0.0",
+        "userfrosting/sprinkle-admin": "~5.0.0",
+        "userfrosting/theme-adminlte": "~5.0.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
