--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
     "require": {
         "php": "^8.1",
         "ext-gd": "*",
-        "userfrosting/framework": "~5.1.0",
-        "userfrosting/sprinkle-core": "~5.1.0",
-        "userfrosting/sprinkle-account": "~5.1.0",
-        "userfrosting/sprinkle-admin": "~5.1.0",
-        "userfrosting/theme-adminlte": "~5.1.0"
+        "userfrosting/framework": "~5.2.0@dev",
+        "userfrosting/sprinkle-core": "~5.2.0@dev",
+        "userfrosting/sprinkle-account": "~5.2.0@dev",
+        "userfrosting/sprinkle-admin": "~5.2.0@dev",
+        "userfrosting/theme-adminlte": "~5.2.0@dev"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
